<resources>
    <string name="app_name">Weather App</string>
    <string name="location">Location</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="updated_at">Updated at</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="_35_c">35°C</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="sunrise">Sunrise</string>
    <string name="_5_30am">5:30am</string>
    <string name="sunset">Sunset</string>
    <string name="_3_50_am">3:50am</string>
    <string name="pressure">Pressure</string>
    <string name="_5_30pm">5:30pm</string>
    <string name="made_by">Made by</string>
    <string name="supratim">Supratim</string>
    <string name="wind">Wind</string>
    <string name="_3_50pm">3:50pm</string>
    <string name="humidity">Humidity</string>
    <string name="_12_30am">12:30am</string>
    <string name="enter_the_name_of_city">Search Places...</string>
    <string name="search">Search</string>
</resources>