<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="#E3E3E3"
                android:textSize="24sp">

            </TextView>

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated_at"
                android:textColor="#D6D5D5"
                android:textSize="14sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/clear_sky"
                android:textColor="#D6D2D2"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/_35_c"
                android:textColor="#EAE8E8"
                android:textSize="90sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp"
                    android:textColor="#E4E4E4">

                </TextView>

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp"
                    android:textColor="#D6D6D6">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#D6D6D6"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        app:tint="#FFF"
                        android:importantForAccessibility="no" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_30am"
                        android:textColor="#FFFDFD"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#D6D6D6"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        app:tint="#FFF"
                        android:importantForAccessibility="no" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_50_am"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#D6D6D6"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        app:tint="#FFF"
                        android:importantForAccessibility="no" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_30pm"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp">

            </Space>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#D6D6D6"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        app:tint="#FFF"
                        android:importantForAccessibility="no" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_12_30am"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#D6D6D6"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind"
                        app:tint="#FFF"
                        android:importantForAccessibility="no" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_50pm"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#D6D6D6"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info"
                        app:tint="#FFF"
                        android:importantForAccessibility="no" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/made_by"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/supratim"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/Search_input"
            android:layout_width="195dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="106dp"
            android:layout_marginEnd="125dp"
            android:layout_marginRight="125dp"
            android:background="@drawable/rounded_text"
            android:hint="@string/enter_the_name_of_city"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:autofillHints=""
            />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:text="@string/search"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ProgressBar>
    <TextView
        android:id="@+id/errortext"
        android:layout_centerInParent="true"
        android:text="@string/something_went_wrong"
        android:textColor="#D6D6D6"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

</RelativeLayout>